--- a/src/views/crud.ejs
+++ b/src/views/crud.ejs
@@ -54,7 +54,7 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputCity">Phone Number</label>
-                        <input type="text" class="form-control" name="phonenmuber">
+                        <input type="text" class="form-control" name="phonenumber">
                     </div>
                     <div class="form-group col-md-3">
                         <label for="inputState">sex</label>
